SPDI-121514 Apply VirtualThread in RPC level